discussion/kv_engine/134802/134802_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

[cluster_framework]: Allow for specifying the output directory for a cluster

By default keeping the same location as before (pwd/cluster_XXXXX), but
allowing the caller to specify another directory (needed when we want
to restart the cluster and pick up the existing database files)

Change-Id: Ief0a3fc9dc86e959444ee6be8fa433eccc075c67

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-08-24 08:47:12.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-24 09:16:08.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13036/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25729/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/cluster_framework/cluster.cc:364:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25729/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3909/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/cluster.cc:364:1: error: expected unqualified-id [clang-diagnostic-error]
<<<<<<< HEAD
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3909/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/cluster.cc:364:1:
error: expected unqualified-id [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3909/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29697/ : FAILURE

Compile error at ..\kv_engine\cluster_framework\cluster.cc(364): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29697/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4237/ : FAILURE

Compile error at [2020-08-24T08:55:36.367Z] ../kv_engine/cluster_framework/cluster.cc:364:1:
error: expected unqualified-id
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4237/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5125/ : FAILURE

Compile error at [2020-08-24T09:01:30.983Z] ../kv_engine/cluster_framework/cluster.cc:364:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5125/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5213/ : FAILURE

Compile error at [2020-08-24T08:53:58.092Z] ../kv_engine/cluster_framework/cluster.cc:364:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5213/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5315/ : FAILURE

Compile error at [2020-08-24T08:54:20.266Z] ../kv_engine/cluster_framework/cluster.cc:364:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5315/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2435/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
